--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -12,10 +12,10 @@
   items:
     - name: 创建公共负载均衡器 - 门户
       href: quickstart-load-balancer-standard-public-portal.md
+    - name: 创建公共负载均衡器 - PowerShell
+      href: quickstart-create-standard-load-balancer-powershell.md
     - name: 创建公共负载均衡器 - Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
-    - name: 创建公共负载均衡器 - Azure PowerShell
-      href: quickstart-create-standard-load-balancer-powershell.md
     - name: 创建公共负载均衡器 - ARM 模板
       href: quickstart-load-balancer-standard-public-template.md
     - name: 创建内部负载均衡器 - 门户
@@ -103,7 +103,7 @@
           href: 'https://docs.microsoft.com/azure/virtual-network/virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-cli'
         - name: Azure PowerShell
           href: 'https://docs.microsoft.com/azure/virtual-network/virtual-network-ipv4-ipv6-dual-stack-standard-load-balancer-powershell'
-        - name: Azure 资源管理器模板
+        - name: Azure Resource Manager 模板
           href: 'https://docs.microsoft.com/azure/virtual-network/ipv6-configure-standard-load-balancer-template-json'
           displayName: ARM
     - name: 配置负载均衡器的 TCP 空闲超时
