--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -70,7 +70,7 @@
           href: /samples/browse/?products=azure-functions&languages=csharp
         - name: Java
           href: /samples/browse/?products=azure-functions&languages=java
-        - name: JavaScript
+        - name: Javascript
           href: /samples/browse/?products=azure-functions&languages=javascript
         - name: PowerShell
           href: /samples/browse/?products=azure-functions&languages=azurepowershell
@@ -103,6 +103,7 @@
           href: functions-bindings-example.md
         - name: 注册绑定扩展
           href: functions-bindings-register.md
+          displayName: 'bundles, extension bundles'
         - name: 绑定表达式模式
           href: functions-bindings-expressions-patterns.md
         - name: 使用绑定返回值
@@ -119,7 +120,7 @@
           href: functions-reference-csharp.md
         - name: F#
           href: functions-reference-fsharp.md
-        - name: JavaScript
+        - name: Javascript
           href: functions-reference-node.md
         - name: Java
           href: functions-reference-java.md
@@ -272,8 +273,6 @@
           displayName: 'app setting, application setting'
         - name: 设置运行时版本
           href: set-runtime-version.md
-        - name: 手动注册扩展
-          href: install-update-binding-extensions-manual.md
         - name: 禁用函数
           href: disable-function.md
         - name: 异地灾难恢复
@@ -376,7 +375,7 @@
             - name: 输入
               displayName: Blob storage
               href: functions-bindings-storage-blob-input.md
-            - name: Output
+            - name: 输出
               displayName: Blob storage
               href: functions-bindings-storage-blob-output.md
         - name: Azure Cosmos DB
@@ -396,7 +395,7 @@
                 - name: 输入
                   href: functions-bindings-cosmosdb-v2-input.md
                   displayName: Azure Cosmos DB
-                - name: Output
+                - name: 输出
                   href: functions-bindings-cosmosdb-v2-output.md
                   displayName: Azure Cosmos DB
         - name: 事件网格
@@ -484,7 +483,7 @@
             - name: 输入
               href: functions-bindings-signalr-service-input.md
               displayName: SignalR Service
-            - name: Output
+            - name: 输出
               href: functions-bindings-signalr-service-output.md
               displayName: SignalR Service
         - name: 表存储
