--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -5,7 +5,6 @@
     - name: 关于虚拟机
       href: overview.md
 - name: 快速入门
-  expanded: true
   items:
     - name: 创建 VM - Azure CLI
       href: quick-create-cli.md
@@ -16,6 +15,7 @@
     - name: 创建 VM - ARM 模板
       displayName: 'Resource Manager, template, json'
       href: quick-create-template.md
+  expanded: true
 - name: 教程
   items:
     - name: 1 - 创建/管理 VM
@@ -294,8 +294,8 @@
             - name: VM 实例大小灵活性
               href: reserved-vm-instance-size-flexibility.md
         - name: 点 VM
-          href: spot-vms.md
           displayName: 'pre-empt, preempt'
+          href: spot-vms.md
         - name: 不带临时磁盘的 Azure VM
           href: ../azure-vms-no-temp-disk.md
         - name: Azure VM 大小命名约定
@@ -371,14 +371,14 @@
       href: states-lifecycle.md
     - name: 监视
       href: ../../azure-monitor/insights/monitor-vm-azure.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+    - name: 启动诊断
+      href: ../../virtual-machines/boot-diagnostics.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
     - name: 备份和恢复
       href: ../backup-recovery.md
     - name: 云采用框架
       href: /azure/cloud-adoption-framework/get-started/
     - name: 体系结构中心
       href: /azure/architecture/
-    - name: 基础结构指南
-      href: infrastructure-example.md
 - name: 操作指南
   items:
     - name: 创建 VM
@@ -405,8 +405,8 @@
             - name: 门户
               href: ../windows/spot-portal.md?toc=/azure/virtual-machines/linux/toc.json
             - name: ARM 模板
-              href: spot-template.md
               displayName: Azure Resource Manager
+              href: spot-template.md
             - name: 错误代码
               href: ../error-codes-spot.md?toc=/azure/virtual-machines/linux/toc.json
     - name: 从经典部署迁移到 Azure 资源管理器部署
@@ -550,8 +550,8 @@
             - name: 使用 Azure CLI
               href: image-builder.md
             - name: ARM 模板参考
-              href: image-builder-json.md
               displayName: 'ARM,Resource Manager'
+              href: image-builder-json.md
             - name: 在映像库中生成映像
               href: image-builder-gallery.md
             - name: 更新现有映像
@@ -585,9 +585,9 @@
                 - name: CLI
                   href: ../../bastion/create-host-cli.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: 使用 Bastion 进行连接
+              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
               items:
                 - name: Bastion SSH 连接
-              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: Bastion RDP 连接
               href: ../../bastion/bastion-connect-vm-rdp.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: 加密
@@ -749,12 +749,12 @@
                 - name: 概述
                   href: ../../azure-monitor/platform/diagnostics-extension-overview.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
                 - name: Linux 诊断扩展
-                  displayname: diagnostics extension
                   items:
                     - name: 概述
                       href: ../../azure-monitor/../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json?toc=/azure/azure-monitor/toc.json
                     - name: 使用 Telegraf 收集指标
                       href: ../../azure-monitor/platform/collect-custom-metrics-linux-telegraf.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+                  displayname: diagnostics extension
             - name: Log Analytics 代理
               items:
                 - name: 概述
@@ -788,11 +788,11 @@
             - name: 疑难解答
               items:
                 - name: Log Analytics VM 扩展
-                  displayname: 'troubleshoot, troubleshooting'
                   href: ../../azure-monitor/platform/vmext-troubleshoot.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
-                - name: Log Analytics Linux 代理
                   displayname: 'troubleshoot, troubleshooting'
+                - name: Log Analytics Linux 代理
                   href: ../../azure-monitor/platform/agent-linux-troubleshoot.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+                  displayname: 'troubleshoot, troubleshooting'
         - name: 用于 VM 的 Azure Monitor
           items:
             - name: 概述
@@ -1134,8 +1134,8 @@
     - name: REST
       href: /rest/api/compute
     - name: 资源管理器模板
-      href: /azure/templates/microsoft.compute/allversions
       displayName: ARM
+      href: /azure/templates/microsoft.compute/allversions
 - name: 资源
   items:
     - name: 问答
