--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -5,7 +5,6 @@
     - name: 关于虚拟机
       href: overview.md
 - name: 快速入门
-  expanded: true
   items:
     - name: 创建 VM - 门户
       href: quick-create-portal.md
@@ -16,6 +15,7 @@
     - name: 创建 VM - ARM 模板
       displayName: 'Resource Manager, template, json'
       href: quick-create-template.md
+  expanded: true
 - name: 教程
   items:
     - name: 1 - 创建/管理 VM
@@ -37,8 +37,8 @@
     - name: 9 - 备份虚拟机
       href: tutorial-backup-vms.md
     - name: 10 - 管理 VM
-      href: tutorial-govern-resources.md
       displayName: scope policy RBAC lock tag
+      href: tutorial-govern-resources.md
     - name: 11 - 跟踪和更新 VM
       href: tutorial-config-management.md
     - name: 12 - 监视 VM
@@ -279,15 +279,15 @@
             - name: VM 实例大小灵活性
               href: reserved-vm-instance-size-flexibility.md
         - name: 点 VM
-          href: spot-vms.md
           displayName: 'pre-empt, preempt'
+          href: spot-vms.md
         - name: 不带临时磁盘的 Azure VM
           href: ../azure-vms-no-temp-disk.md
         - name: Azure VM 大小命名约定
           href: ../vm-naming-conventions.md
         - name: 前几代
-          href: ../sizes-previous-gen.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
           displayName: D-series Ds-series A-series Basic
+          href: ../sizes-previous-gen.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: 独立大小
           href: ../isolation.md
         - name: Azure 计算单元 (ACU)
@@ -355,14 +355,14 @@
       href: states-lifecycle.md
     - name: 监视
       href: ../../azure-monitor/insights/monitor-vm-azure.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
+    - name: 启动诊断
+      href: ../../virtual-machines/boot-diagnostics.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: 备份和恢复
       href: ../backup-recovery.md
     - name: 云采用框架
       href: /azure/cloud-adoption-framework/get-started/?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: 体系结构中心
       href: /azure/architecture/
-    - name: 基础结构示例
-      href: infrastructure-example.md
 - name: 操作指南
   items:
     - name: 创建 VM
@@ -554,9 +554,9 @@
                 - name: CLI
                   href: ../../bastion/create-host-cli.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
             - name: 使用 Bastion 进行连接
+              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
               items:
                 - name: Bastion SSH 连接
-              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
             - name: Bastion RDP 连接
               href: ../../bastion/bastion-connect-vm-rdp.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: 加密
@@ -747,11 +747,11 @@
             - name: 疑难解答
               items:
                 - name: Log Analytics VM 扩展
-                  displayname: 'troubleshoot, troubleshooting'
                   href: ../../azure-monitor/platform/vmext-troubleshoot.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
-                - name: Log Analytics Windows 代理
                   displayname: 'troubleshoot, troubleshooting'
+                - name: Log Analytics Windows 代理
                   href: ../../azure-monitor/platform/agent-windows-troubleshoot.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
+                  displayname: 'troubleshoot, troubleshooting'
         - name: 用于 VM 的 Azure Monitor
           items:
             - name: 概述
