--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -49,6 +49,8 @@
       items:
         - name: 安全基线
           href: security-baseline.md
+    - name: 数据驻留
+      href: data-residency.md
 - name: 操作指南
   items:
     - name: 配置网络观察程序
