--- a/articles/docker/toc.yml
+++ b/articles/docker/toc.yml
@@ -8,10 +8,10 @@
 - name: 教程
   items:
     - name: 使用 Docker 和 PostgreSQL 的 Python Web 应用
-      href: ../app-service/containers/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
+      href: ../app-service/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
     - name: 将 CI/CD 与 Docker、Jenkins 和 Linux 配合使用
       href: /azure/jenkins/tutorial-jenkins-github-docker-cicd
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: Docker VM 扩展
       href: /azure/virtual-machines/linux/dockerextension
